--- a/theme/css/variables.css
+++ b/theme/css/variables.css
@@ -2,12 +2,18 @@
 /* Globals */
 
 :root {
-    --sidebar-width: 250px;
+    --sidebar-width: 180px;
     --page-padding: 15px;
     --content-max-width: 82%;
     --menu-bar-height: 40px;
     --pagetoc-width: 13%;
     --pagetoc-fontsize: 14.5px;
+}
+
+@media only screen and (max-width:1439px) {
+ :root{
+    --content-max-width: 98%;
+  }
 }
 
 @media only screen and (max-width:1439px) {
