--- a/theme/css/general.css
+++ b/theme/css/general.css
@@ -12,6 +12,7 @@ html {
     color: var(--fg);
     background-color: var(--bg);
     text-size-adjust: none;
+    -webkit-text-size-adjust: none;
 }
 
 body {
@@ -83,8 +84,8 @@ h6:target::before {
     padding-bottom: 50px;
 }
 .content main {
-    margin-left: 2%;
-    margin-right: 2%;
+    margin-left: 4%;
+    margin-right: 4%;
     max-width: var(--content-max-width);
 }
 .content p { line-height: 1.45em; }
@@ -174,4 +175,8 @@ blockquote {
     color: var(--sidebar-fg);
     margin: 5px 0px;
     font-weight: bold;
+}
+
+.result-no-output {
+    font-style: italic;
 }
