--- a/theme/css/variables.css
+++ b/theme/css/variables.css
@@ -4,10 +4,22 @@
 :root {
     --sidebar-width: 300px;
     --page-padding: 15px;
-    --content-max-width: 82%;
+    --content-max-width: 75%;
     --menu-bar-height: 40px;
-    --pagetoc-width: 13%;
+    --pagetoc-width: 15%;
     --pagetoc-fontsize: 14.5px;
+}
+
+@media only screen and (max-width:1439px) {
+ :root{
+    --content-max-width: 98%;
+  }
+}
+
+@media only screen and (max-width:1439px) {
+ :root{
+    --content-max-width: 98%;
+  }
 }
 
 @media only screen and (max-width:1439px) {
@@ -93,7 +105,7 @@
 
     --links: #2b79a2;
 
-    --inline-code-color: #c5c8c6;;
+    --inline-code-color: #c5c8c6;
 
     --theme-popup-bg: #141617;
     --theme-popup-border: #43484d;
@@ -173,7 +185,7 @@
 
     --links: #2b79a2;
 
-    --inline-code-color: #c5c8c6;;
+    --inline-code-color: #c5c8c6;
 
     --theme-popup-bg: #161923;
     --theme-popup-border: #737480;
@@ -254,7 +266,7 @@
 
         --links: #2b79a2;
 
-        --inline-code-color: #c5c8c6;;
+        --inline-code-color: #c5c8c6;
 
         --theme-popup-bg: #141617;
         --theme-popup-border: #43484d;
